--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 aiohttp==3.8.5
 altair==5.0.1
 blinker==1.6.2
@@ -31,3 +30,7 @@ transformers==4.31.0
 urllib3==2.0.4
 validators==0.20.0
 watchdog==3.0.0
+PyPDF2==3.0.1
+python-dotenv==1.0.0
+faiss-cpu==1.7.4
+streamlit-chat==0.1.1
