--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,15 @@
 pip==24.0
-aiohttp==3.8.5
-altair==5.0.1
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.6
-decorator==5.1.1
-filelock==3.12.2
-gitdb==4.0.10
-GitPython==3.1.32
-idna==3.4
-Jinja2==3.1.2
-joblib==1.3.1
-langchain==0.0.251
-numpy==1.25.2
-openai==0.27.8
-pandas==2.0.3
-protobuf==4.23.4
-pydantic==1.10.12
-pytz==2023.3
-requests==2.31.0
-scikit-learn==1.3.0
-scipy==1.11.1
 streamlit==1.25.0
-sentence-transformers==2.2.2
-tenacity==8.2.2
-tqdm==4.65.0
-transformers==4.31.0
-urllib3==2.0.4
-validators==0.20.0
-watchdog==3.0.0
 PyPDF2==3.0.1
-python-dotenv==1.0.0
+python-docx==0.8.11
+langchain==0.0.251
+openai==0.27.8
 faiss-cpu==1.7.4
+sentence-transformers==2.2.2
+python-dotenv==1.0.0
 streamlit-chat==0.1.1
+huggingface-hub==0.20.1
+torch==2.0.1
+transformers==4.36.2
+datasets==2.14.5
+tqdm==4.66.1
